grammar.js
    source_file: ($) => repeat($._structure_item),

    _structure_item: ($) =>
      choice(
        prec(PREC.TOP_LEVEL_EXPRESSION, $.expression),
        prec(PREC.MODULE_DECLARATION, $._module)
      ),

    ////////////////////////////////////////////////////////////////////////////
    //
    // Modules
    //
    ////////////////////////////////////////////////////////////////////////////

    pattern: ($) =>
      prec(PREC.PATTERN, choice($.term, $.variable, $.pat_list, $.pat_tuple)),

    pat_list: ($) =>
      prec(PREC.PATTERN, choice(list($.pattern), $.pat_list_cons)),

    expr_try: ($) =>
      seq(
        "try",
        $.expression,
        opt(seq("of", sepBy(SEMI, $.case_clause))),
        choice($.expr_try_catch, $.expr_try_after, $._expr_try_catch_after),
        "end"
      ),

    expr_try_catch: ($) => seq("catch", sepBy(SEMI, $.catch_clause)),
    expr_try_after: ($) => seq("after", $.expression),
    _expr_try_catch_after: ($) => seq($.expr_try_catch, $.expr_try_after),
    catch_clause: ($) =>
      seq(
        field("pattern", $.catch_pattern),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),
    catch_pattern: ($) =>
      seq(
        field("class", $.pattern),
        field("exception", opt(seq(COLON, $.pattern))),
        field("stacktrace", opt(seq(COLON, $.variable)))
      ),

    expr_catch: ($) => prec.left(seq("catch", $.expression)),
    expr_throw: ($) => prec.left(seq("throw", $.expression)),

    expr_list_comprehension: ($) =>
      seq(
        BRACKET_LEFT,
        $.expression,
        DOUBLE_PIPE,
        $.expr_list_generator,
        opt(seq(COMMA, $.expr_list_filter)),
        BRACKET_RIGHT
      ),

    expr_list_generator: ($) => seq($.expression, REV_ARROW, $.expression),
    expr_list_filter: ($) => sepBy(COMMA, $.expression),

    expr_bitstring_comprehension: ($) =>
      seq(
        BINARY_LEFT,
        $.term,
        DOUBLE_PIPE,
        $.expr_bitstring_generator,
        opt(seq(COMMA, $.expr_bitstring_filter)),
        BINARY_RIGHT
      ),

    expr_bitstring_generator: ($) =>
      seq(BINARY_LEFT, $.expression, BINARY_RIGHT, REV_FAT_ARROW, $.expression),
    expr_bitstring_filter: ($) => sepBy(COMMA, $.expression),

    expr_op: ($) => choice($._expr_operator_unary, $._expr_operator_binary),

    _expr_operator_unary: ($) =>
      prec.right(
        PREC.UNARY_OP,
        seq(field("operator", alias(oneOf(OP1), $.unary_op)), field("operand", $.expression))
      ),

    _expr_operator_binary: ($) =>
      choice(
        prec.left(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", alias(oneOf(OP2_LEFT_ASSOC), $.binary_op)),
            field("rhs", $.expression)
          )
        ),
        prec.right(
          PREC.BINARY_OP,
          seq(
            field("lhs", $.expression),
            field("operator", alias(oneOf(OP2_RIGHT_ASSOC), $.binary_op)),
            field("rhs", $.expression)
          )
        )
      ),

    expr_list: ($) =>
      prec(PREC.EXPR_LIST_CONS, choice(list($.expression), $.expr_list_cons)),

    case_clause: ($) =>
      seq(
        field("pattern", $.pattern),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),

    guard_clause: ($) => seq("when", $.guard_seq),
    guard_seq: ($) => sepBy(SEMI, $.guard),
    guard: ($) => sepBy(COMMA, $.expression),

    expr_match: ($) =>
      prec.right(PREC.MATCH, seq($.expression, EQUAL, $.expression)),

    expr_lambda: ($) => seq("fun", sepBy(SEMI, $.lambda_clause), "end"),

    lambda_clause: ($) =>
      seq(
        field("arguments", args($.pattern)),
        opt($.guard_clause),
        ARROW,
        field("body", sepBy(COMMA, $.expression))
      ),

    expr_function_call: ($) =>
      seq(field("name", $._function_name), args($.expression)),

    _function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.computed_function_name, $.qualified_function_name)
      ),

    computed_function_name: ($) =>
      prec(
        PREC.FUNCTION_NAME,
        choice($.variable, $.atom, parens($.expression))
      ),

    variable: ($) =>
      /[_A-Z\xC0-\xD6\xD8-\xDE][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,

    atom: ($) => field("value", choice($._unquoted_atom, $._quoted_atom)),
    _unquoted_atom: ($) =>
      /[a-z\xDF-\xF6\xF8-\xFF][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/,
    _quoted_atom: ($) => seq("'", repeat(choice(/[^'\\]+/, $._escape)), "'"),

    integer: ($) =>
      choice(
        // binary syntax
        /-?2#[01_]+/,
        // hex syntax
        /-?16#[a-fA-F0-9_]+/,
        // regular "other base" syntax
        /-?([\d*_]*#)?[\d_]+/
      ),
    binary_string: ($) =>
      seq(BINARY_LEFT, opt(sepBy(COMMA, $.bin_part)), BINARY_RIGHT),
    bin_part: ($) =>
      choice(
        seq(
          choice($.integer, $.float, $.string),
          opt($.bin_sized),
          opt($.bin_type_list)
        ),
        seq(parens($.expression), opt($.bin_sized), opt($.bin_type_list))
      ),
