test/corpus/expr_arithmetic.txt
================================================================================
reference examples
================================================================================

2#10 band 2#01

2#10 bor 2#01

1 bsl (1 bsl 64)

--------------------------------------------------------------------------------

(source_file
  (expr_op
    (integer)
	(binary_op)
    (integer))
  (expr_op
    (integer)
	(binary_op)
    (integer))
  (expr_op
    (integer)
	(binary_op)
    (expr_op
      (integer)
      (binary_op)
      (integer))))
