test/corpus/expr_bit_string.txt
================================================================================
comprehensions
================================================================================

<< << (X*2) >> || <<X>> <= << 1,2,3 >>, is_integer(X) >>

--------------------------------------------------------------------------------

(source_file
  (expr_bitstring_comprehension
    (binary_string
      (bin_part
        (expr_op
          (variable)
          (binary_op)
          (integer))))
    (expr_bitstring_generator
      (variable)
      (binary_string
        (bin_part
          (integer))
        (bin_part
          (integer))
        (bin_part
          (integer))))
    (expr_bitstring_filter
      (expr_function_call
        (computed_function_name
          (atom))
        (variable)))))
