test/corpus/term_fun.txt
================================================================================
constant without args
================================================================================

fun () -> ok end

--------------------------------------------------------------------------------

(source_file
  (expr_lambda
    (lambda_clause
      (atom))))

================================================================================
identity function
================================================================================

fun (X) -> X end

--------------------------------------------------------------------------------

(source_file
  (expr_lambda
    (lambda_clause
      (pattern
        (variable))
      (variable))))

================================================================================
multiple clauses
================================================================================

fun
  ([]) -> ok;
  (Args) when Args > 0 -> Args
end

--------------------------------------------------------------------------------

(source_file
  (expr_lambda
    (lambda_clause
      (pattern
        (pat_list))
      (atom))
    (lambda_clause
      (pattern
        (variable))
      (guard_clause
        (guard_seq
          (guard
            (expr_op
              (variable)
              (binary_op)
              (integer)))))
      (variable))))
